<resources>
    <!--    <string name="app_name">Sadguru Dryfruits</string>-->
    <string name="app_name">Nut Mart</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_repassword">Re Enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="f_name">Enter First Name</string>
    <string name="l_name">Enter Last Name</string>
    <string name="prompt_confim_password">Confirm Password</string>
    <string name="prompt_phone">Enter Mobile</string>
    <string name="action_register">Register</string>
    <string name="title_activity_trial_navigation_drawer">TrialNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string-array name="menuList">
        <item>Dashboard</item>
        <item>Orderd list</item>
        <item>Profile</item>
        <item>Feedback</item>
        <item>Recieved Orders</item>
        <item>Add Product</item>
        <item>Logout</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tryAgain">Oops something went wrong. Try Again</string>
    <string name="title_activity_cart">CartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cart_empty_str">Your cart is empty</string>
    <string name="Rs">\u20B9</string>
    <string name="action_place_order">Place Order</string>
    <string name="title_activity_track_order">Order Status</string>
    <string name="estimated_string">ESTIMATED TIME</string>
    <string name="order_number_string">ORDER NUMBER</string>
    <string name="title_activity_verification_activity">Verification</string>
    <string name="error_empty_firstname">Please enter Full Name</string>
    <string name="error_empty_firstnameedit">Please enter First Name</string>
    <string name="error_empty_lastname">Please enter Last Name</string>
    <string name="error_empty_emailid">Please enter Email ID</string>
    <string name="error_valid_emailid">Please enter valid Email ID</string>
    <string name="error_empty_mobileNo">Please enter Mobile No</string>
    <string name="error_valid_mobileNo">Mobile number must be at least 10 characters</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_valid_password">Please enter same password</string>
    <string name="error_empty_address">Please enter Address</string>
    <string name="title_activity_main">ProfileActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_save_profile">Save</string>
    <string name="prompt_address">Enter Address</string>
    <string name="prompt_city">Enter City</string>
    <string name="prompt_pincode">Enter Pincode</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="error_same_password">Please enter same password</string>
    <string name="product_name">Enter Product Name</string>
    <string name="product_rate">Enter Product Rate</string>
    <string name="product_type">Enter Product Type</string>
    <string name="action_submit">SUBMIT</string>
    <string name="action_delete">DELETE</string>

</resources>