<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dryfruits"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/layout_transparent_fill"
        android:orientation="vertical"
        android:gravity="center"
        android:alpha="0.9"
        android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        style="@style/Widget.cravx.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:inputType="phone"
            android:maxLength="10"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:visibility="gone"
        style="@style/Widget.cravx.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
<!--    <EditText-->
<!--        android:id="@+id/username"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginTop="96dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:hint="@string/prompt_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="24dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:hint="@string/prompt_password"-->
<!--        android:imeActionLabel="@string/action_sign_in_short"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="textPassword"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/username" />-->

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#515151"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/action_sign_in"
        android:background="@drawable/button_selector"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="#515151"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:text="OR"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"
                android:background="#515151"/>
        </LinearLayout>
    <Button
        android:id="@+id/register"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#515151"
        android:layout_marginBottom="24dp"
        android:text="@string/action_register" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</LinearLayout>