<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dryfruits"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.product.AddProduct">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_transparent_fill"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:id="@+id/main_layer"

            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_til"
                style="@style/Widget.cravx.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_rate_til"
                style="@style/Widget.cravx.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_rate"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_product_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColorHint="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/weight_spinner_error_txt"
                android:text="Please select weight"
                android:layout_height="wrap_content"
                android:textColor="#db6b53"
                android:visibility="gone"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <Spinner
                android:id="@+id/spinner_product_weight_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColorHint="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/weight_type_spinner_error_txt"
                android:text="Please select weight type"
                android:layout_height="wrap_content"
                android:textColor="#db6b53"
                android:visibility="gone"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <Spinner
                android:id="@+id/spinner_product_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:textColorHint="#ffffff"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/product_type_spinner_error_txt"
                android:text="Please select product type"
                android:layout_height="wrap_content"
                android:textColor="#db6b53"
                android:visibility="gone"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_type_til"
                style="@style/Widget.cravx.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/product_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_type"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#ffffff"
        android:background="@drawable/layout_primary_fill"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/action_submit" />
    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:textColor="#ffffff"
        android:background="@drawable/layout_red_fill"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/action_delete" />
    </LinearLayout>
</LinearLayout>